Added Flask API
Contains scrapers + trained machine learning model
